# Estacao-de-alerta-FreeRTOS

./: CMakeLists.txt  Principal.c  README.md
lib/: desenhosMatriz.h  matrizled.c
